FullSb1-27-apr-15/src/objects/Visa_Track__c.object
<CustomObject>
    <fields>
        <fullName>Campus1__c</fullName>
        <description>This will be used to filter out the non-possible Visa Track options on the Visa Track lookup field in the Rotation object</description>
        <label>Campus1</label>
        <picklist>
            <picklistValues>
                <fullName>Boston</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dubai</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>London</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>San Francisco</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Shanghai</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Campus2__c</fullName>
        <label>Campus2</label>
        <picklist>
            <picklistValues>
                <fullName>Boston</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dubai</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>London</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>San Francisco</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Shanghai</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Campus_3__c</fullName>
        <label>Campus 3</label>
        <picklist>
            <picklistValues>
                <fullName>London</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Boston</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>San Francisco</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Shanghai</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dubai</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New York</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <description>This is the country bound for a particular visa track</description>
        <label>Country</label>
        <referenceTo>Country__c</referenceTo>
        <relationshipLabel>Visa Tracks</relationshipLabel>
        <relationshipName>Visa_Tracks</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Fee_USD__c</fullName>
        <label>Fee (USD)</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ID_18__c</fullName>
        <formula>CASESAFEID(Id)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ID 18</label>
        <type>Text</type>
    </fields>
    <label>Visa Track</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Campus1__c</columns>
        <columns>Campus2__c</columns>
        <columns>Campus_3__c</columns>
        <columns>Country__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Visa Track Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Visa Tracks</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>